...
              const SizedBox(height: 10),
              const Divider(
                color: GREY_COLOR,
              ),
              const SizedBox(height: 10),
              InkWell(
                key: const ValueKey("Rename"),
                onTap: () => onTapRename(),
                child: const MenuOptionsView(
                    menuIcon: Icons.mode_edit_outline_outlined,
                    menuName: "Rename shelf"),
              ),
              const SizedBox(height: 20),
              InkWell(
                  key: const ValueKey("Delete"),
                  onTap: () => onTapDelete(),
                  child: const MenuOptionsView(
                      menuIcon: Icons.delete_outline_sharp,
                      menuName: "Delete shelf"))
            ],
          ),
...
                const Divider(
                  color: Colors.grey,
                ),
                Row(
                  children: [
                    Radio(
                      key: const ValueKey("ViewTypeRadioOne"),
                      activeColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                      value: 1,
                      groupValue: value,
                      onChanged: (val) {
                        bloc.setViewTypeValue(val: val ?? 0);
                        Navigator.of(context).pop();
...
                    )
                  ],
                ),
                Row(
                  children: [
                    Radio(
                      key: const ValueKey("ViewTypeRadioTwo"),
                      activeColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                      value: 2,
                      groupValue: value,
                      onChanged: (val) {
                        bloc.setViewTypeValue(val: val ?? 0);
                        Navigator.of(context).pop();
...
                    )
                  ],
                ),
                Row(
                  children: [
                    Radio(
                      key: const ValueKey("ViewTypeRadioThree"),
                      activeColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                      value: 3,
                      groupValue: value,
                      onChanged: (val) {
                        bloc.setViewTypeValue(val: val ?? 0);
                        Navigator.of(context).pop();
...
                const Divider(
                  color: Colors.grey,
                ),
                Row(
                  children: [
                    Radio(
                      key: const ValueKey("SortByRadioOne"),
                      activeColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                      value: 1,
                      groupValue: value,
                      onChanged: (val) {
                        bloc.sortBookByType(val: val ?? 0);
                        Navigator.of(context).pop();
...
                    )
                  ],
                ),
                Row(
                  children: [
                    Radio(
                      key: const ValueKey("SortByRadioTwo"),
                      activeColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                      value: 2,
                      groupValue: value,
                      onChanged: (val) {
                        bloc.sortBookByType(val: val ?? 0);
                        Navigator.of(context).pop();
...
                    )
                  ],
                ),
                Row(
                  children: [
                    Radio(
                      key: const ValueKey("SortByRadioThree"),
                      activeColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                      value: 3,
                      groupValue: value,
                      onChanged: (val) {
                        bloc.sortBookByType(val: val ?? 0);
                        Navigator.of(context).pop();
...
              iconSize: 33),
        ),
        const Spacer(),
        InkWell(
          onTap: () => onTapMenu(),
          child: const IconView(
            key: ValueKey("MenuButton"),
              icon: Icons.more_horiz,
              iconColor: APP_PRIMARY_COLOR,
              iconSize: 25),
        ),
      ],
    );
...
    return SizedBox(
      height: 60,
      // color: GREY_COLOR,
      child: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 20),
        child: TextField(
          key: const ValueKey("TextField"),
          cursorColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
          cursorHeight: 30,
          cursorWidth: 1,
          onSubmitted: (text) {
            onSubmit(text);
          },
...
