...
            ),
            Visibility(
              visible: isShowClearButton,
              child: Padding(
                padding: const EdgeInsets.only(top: 15.0, bottom: 15, left: 8),
                child: InkWell(
                  key: const ValueKey("ClearButton"),
                  onTap: () => onTapClearButtonInChipView(),
                  child: Container(
                    width: 30,
                    height: 30,
                    decoration: BoxDecoration(
                        border: Border.all(color: Colors.black54),
...
              itemCount: categoryChipLabels.length,
              scrollDirection: Axis.horizontal,
              itemBuilder: (context, index) {
                return Padding(
                  padding: const EdgeInsets.only(left: 8.0),
                  child: FilterChip(
                    key: const ValueKey("Chip"),
                    backgroundColor: WHITE_COLOR,
                    side: (chipIsSelected[index])
                        ? const BorderSide(color: WHITE_COLOR)
                        : const BorderSide(color: GREY_COLOR),
                    selectedColor: LIGHT_THEME_SELECTED_CHIP_COLOR,
                    showCheckmark: false,
...
